[project]
name = "splunk-downloader"
version = "0.1.0"
license = { text = "MIT" }
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
description = "Download your Splunk binaries with this quick tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "loguru>=0.7.2",
    "packaging>=24.1",
    "pydantic>=2.9.1",
    "requests>=2.32.3",
]

[project.scripts]

splunk-downloader = "splunk_downloader:cli"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff>=0.6.5",
    "types-requests>=2.32.0.20240907",
]


[tool.pylint.MASTER]
max-line-length = 200

disable = "W0511,consider-using-dict-items,duplicate-code"

# https://github.com/samuelcolvin/pydantic/issues/1961#issuecomment-759522422
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic"

[tool.ruff]
line-length = 150
