[project]
name = "splunk-downloader"
version = "0.2.1"
license = { text = "MIT" }
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
description = "Download your Splunk binaries with this quick tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.2",
    "loguru>=0.7.2",
    "packaging>=26.1",
    "pydantic>=2.13.1",
    "requests>=2.33.1",
]

[project.scripts]
splunk-downloader = "splunk_downloader:cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "ty>=0.0.31",
    "types-requests>=2.33.0.20260408",
]


[tool.coverage.report]
exclude_also = [
    "def download_link", # user-facing function
    "def cli",           # user-facing function, that's actually tested in CliRunner
]
